Fixing types for artist
