# docs/swagger.json
@@ -20,7 +20,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.ApiResponse-types_ApiArtistList"
+                            "$ref": "#/definitions/types.ApiResponse-types_ApiGetArtistsData"
                         }
                     },
                     "400": {
@@ -62,7 +62,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.ApiResponse-types_ApiArtist"
+                            "$ref": "#/definitions/types.ApiResponse-types_ApiPostArtistData"
                         }
                     },
                     "400": {
@@ -103,7 +103,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.ApiResponse-types_ApiArtist"
+                            "$ref": "#/definitions/types.ApiResponse-types_ApiGetArtistByIdData"
                         }
                     },
                     "400": {
@@ -150,7 +150,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.ApiResponse-types_ApiGetArtistAlbumsData"
+                            "$ref": "#/definitions/types.ApiResponse-types_ApiGetArtistAlbumsByIdData"
                         }
                     },
                     "400": {
@@ -201,31 +201,6 @@
                 }
             }
         },
-        "types.ApiArtistList": {
-            "type": "object",
-            "properties": {
-                "artists": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/types.ApiArtistListItem"
-                    }
-                }
-            }
-        },
-        "types.ApiArtistListItem": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "picture": {
-                    "type": "string"
-                }
-            }
-        },
         "types.ApiError": {
             "type": "object",
             "properties": {
@@ -239,7 +214,7 @@
                 }
             }
         },
-        "types.ApiGetArtistAlbumsData": {
+        "types.ApiGetArtistAlbumsByIdData": {
             "type": "object",
             "properties": {
                 "albums": {
@@ -250,11 +225,50 @@
                 }
             }
         },
-        "types.ApiResponse-types_ApiArtist": {
+        "types.ApiGetArtistByIdData": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "picture": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.ApiGetArtistsData": {
+            "type": "object",
+            "properties": {
+                "artists": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.ApiArtist"
+                    }
+                }
+            }
+        },
+        "types.ApiPostArtistData": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "picture": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.ApiResponse-types_ApiGetArtistAlbumsByIdData": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/types.ApiArtist"
+                    "$ref": "#/definitions/types.ApiGetArtistAlbumsByIdData"
                 },
                 "status": {
                     "type": "integer",
@@ -262,11 +276,11 @@
                 }
             }
         },
-        "types.ApiResponse-types_ApiArtistList": {
+        "types.ApiResponse-types_ApiGetArtistByIdData": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/types.ApiArtistList"
+                    "$ref": "#/definitions/types.ApiGetArtistByIdData"
                 },
                 "status": {
                     "type": "integer",
@@ -274,11 +288,23 @@
                 }
             }
         },
-        "types.ApiResponse-types_ApiGetArtistAlbumsData": {
+        "types.ApiResponse-types_ApiGetArtistsData": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/types.ApiGetArtistAlbumsData"
+                    "$ref": "#/definitions/types.ApiGetArtistsData"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 200
+                }
+            }
+        },
+        "types.ApiResponse-types_ApiPostArtistData": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/types.ApiPostArtistData"
                 },
                 "status": {
                     "type": "integer",
